src/styles/App.css
@tailwind preflight;
@tailwind utilities;

html,
body,
#root,
.App {
  height: 100%;
}

body{
  font-size: 15px;
  font-family: sans-serif;
  background-color: #4DC0B5;
  margin: 0;
  padding: 0;
}

input:focus {
  background-color: #FAF9E8;
}

button {
  color: white;
  font-size: 1.2em;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 15px;
  padding-right: 15px;
}

button:hover {
  cursor: pointer;
}

.container {
  max-width: 860px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 20px;
  padding-right: 20px;
}

.App {
  text-align: center;
  font-family: Trebuchet MS, Arial, Verdana;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #4DC0B5;
  height: 52px;
  padding: 10px;
  color: white;
}

.App-title {
  font-size: 1.5em;
}

.App-body {
  margin-left: auto;
  margin-right: auto;
  background-color: #EBF5FB;
  padding-top: 20px;
  padding-bottom: 20px;
  height: calc(100% - 52px);
}

.data-discount-color {
 background-color: #FEF9E9;
}

.icon {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

